# Programming-2-Labs

./: CMakeLists.txt  README.md  main.cpp
Practice/Week1/: Task1.cpp  Task2.cpp  Task3.cpp  Task6.cpp  Task9.cpp
Practice/Week2/: Task1.cpp  Task11.cpp  Task13.cpp  Task14.cpp  Task2.cpp  Task4.cpp  Task5.cpp  Task7.cpp  Task8.cpp
Practice/Week3/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Practice/Week4/: Task1.cpp  Task10.cpp  Task11.cpp  Task12.cpp  Task13.cpp  Task14.cpp  Task15.cpp  Task16.cpp  Task17.cpp  Task18.cpp  Task19.cpp  Task2.cpp  Task20.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Practice/Week5/: Task1.cpp  Task10.cpp  Task11.cpp  Task12.cpp  Task13.cpp  Task14.cpp  Task15.cpp  Task16.cpp  Task17.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp  Task9.cpp
Week1/: Task10.cpp  Task11.cpp  Task4.cpp  Task5.cpp  Task7.cpp  Task8.cpp
Week2/: Task10.cpp  Task12.cpp  Task15.cpp  Task3.cpp  Task6.cpp  Task9.cpp
