cmake_minimum_required(VERSION 3.27)
project(LabTasks1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Task1 Week1/Task1.cpp)
add_executable(Task2 Week1/Task2.cpp)
add_executable(Task3 Week1/Task3.cpp)
add_executable(Task4 Week1/Task4.cpp)
add_executable(Task5 Week1/Task5.cpp)
add_executable(Task6 Week1/Task6.cpp)
add_executable(Task7 Week1/Task7.cpp)
add_executable(Task8 Week1/Task8.cpp)
add_executable(Task9 Week1/Task9.cpp)
add_executable(Task10 Week1/Task10.cpp)
add_executable(Task11 Week1/Task11.cpp)
