cmake_minimum_required(VERSION 3.27)
project(LabTasks1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Task1 Practice/Week1/Task1.cpp)
add_executable(Task2 Practice/Week1/Task2.cpp)
add_executable(Task3 Practice/Week1/Task3.cpp)
add_executable(Task4 Practice/Week1/Task4.cpp)
add_executable(Task5 Practice/Week1/Task5.cpp)
add_executable(Task6 Practice/Week1/Task6.cpp)
add_executable(Task7 Practice/Week1/Task7.cpp)
add_executable(Task8 Practice/Week1/Task8.cpp)
add_executable(Task9 Practice/Week1/Task9.cpp)
add_executable(Task10 Practice/Week1/Task10.cpp)
add_executable(Task11 Practice/Week1/Task11.cpp)


add_executable(2Task1 Practice/Week2/Task1.cpp)
add_executable(2Task2 Practice/Week2/Task2.cpp)
add_executable(2Task3 Practice/Week2/Task3.cpp)
add_executable(2Task4 Practice/Week2/Task4.cpp)
add_executable(2Task5 Practice/Week2/Task5.cpp)
add_executable(2Task6 Practice/Week2/Task6.cpp)
add_executable(2Task7 Practice/Week2/Task7.cpp)
add_executable(2Task8 Practice/Week2/Task8.cpp)
add_executable(2Task9 Practice/Week2/Task9.cpp)
add_executable(2Task10 Practice/Week2/Task10.cpp)
add_executable(2Task11 Practice/Week2/Task11.cpp)
add_executable(2Task12 Practice/Week2/Task12.cpp)
add_executable(2Task13 Practice/Week2/Task13.cpp)
add_executable(2Task14 Practice/Week2/Task14.cpp)
add_executable(2Task15 Practice/Week2/Task15.cpp)

add_executable(3Task1 Practice/Week3/Task1.cpp)
add_executable(3Task2 Practice/Week3/Task2.cpp)
add_executable(3Task3 Practice/Week3/Task3.cpp)
add_executable(3Task4 Practice/Week3/Task4.cpp)
add_executable(3Task5 Practice/Week3/Task5.cpp)
add_executable(3Task6 Practice/Week3/Task6.cpp)
add_executable(3Task7 Practice/Week3/Task7.cpp)
add_executable(3Task8 Practice/Week3/Task8.cpp)
add_executable(3Task9 Practice/Week3/Task9.cpp)


add_executable(4Task1 Practice/Week4/Task1.cpp)
add_executable(4Task2 Practice/Week4/Task2.cpp)
add_executable(4Task3 Practice/Week4/Task3.cpp)
add_executable(4Task4 Practice/Week4/Task4.cpp)
add_executable(4Task5 Practice/Week4/Task5.cpp)
add_executable(4Task6 Practice/Week4/Task6.cpp)
add_executable(4Task7 Practice/Week4/Task7.cpp)
add_executable(4Task8 Practice/Week4/Task8.cpp)
add_executable(4Task9 Practice/Week4/Task9.cpp)
add_executable(4Task10 Practice/Week4/Task10.cpp)
add_executable(4Task11 Practice/Week4/Task11.cpp)
add_executable(4Task12 Practice/Week4/Task12.cpp)
add_executable(4Task13 Practice/Week4/Task13.cpp)
add_executable(4Task14 Practice/Week4/Task14.cpp)
add_executable(4Task15 Practice/Week4/Task15.cpp)
add_executable(4Task16 Practice/Week4/Task16.cpp)
add_executable(4Task17 Practice/Week4/Task17.cpp)
add_executable(4Task18 Practice/Week4/Task18.cpp)
add_executable(4Task19 Practice/Week4/Task19.cpp)
add_executable(4Task20 Practice/Week4/Task20.cpp)

add_executable(5Task1 Practice/Week5/Task1.cpp)
add_executable(5Task2 Practice/Week5/Task2.cpp)
add_executable(5Task3 Practice/Week5/Task3.cpp)
add_executable(5Task4 Practice/Week5/Task4.cpp)
add_executable(5Task5 Practice/Week5/Task5.cpp)
add_executable(5Task6 Practice/Week5/Task6.cpp)
add_executable(5Task7 Practice/Week5/Task7.cpp)
add_executable(5Task8 Practice/Week5/Task8.cpp)
add_executable(5Task9 Practice/Week5/Task9.cpp)
add_executable(5Task10 Practice/Week5/Task10.cpp)
add_executable(5Task11 Practice/Week5/Task11.cpp)
add_executable(5Task12 Practice/Week5/Task12.cpp)
add_executable(5Task13 Practice/Week5/Task13.cpp)
add_executable(5Task14 Practice/Week5/Task14.cpp)
add_executable(5Task15 Practice/Week5/Task15.cpp)
add_executable(5Task16 Practice/Week5/Task16.cpp)
add_executable(5Task17 Practice/Week5/Task17.cpp)
add_executable(5Task18 Practice/Week5/Task18.cpp)



